fixed lengthy name issue, GUI updated, loader alignment fix, status on starred page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -119,7 +119,7 @@
   top: -32px;
   left: 10px;
   text-align: center;
-  color: rgb(234, 248, 35);
+  color: #2400e1;
   transition: all 0.5s ease-in-out;
 }
 
@@ -250,21 +250,22 @@
 .user-grid {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   border: solid 1px gray;
   border-radius: 12px;
-  padding: 12px 20px;
+  padding: 20px 25px;
   margin: 0 auto;
   box-shadow: 0px 0px 4px 0px rgba(219, 219, 219, 0.5);
 }
 
 .search-img-wrapper {
-  width: 250;
-  height: 250px;
+  width: 230px;
+  height: 230px;
   border-radius: 50%;
   border: solid 1px #2400e1;
-  margin-right: 50px;
   overflow: hidden;
+  margin-right: 50px;
   box-shadow: 0px 5px 10px 0px rgba(219, 219, 219, 0.5);
 }
 
@@ -276,6 +277,7 @@
 
 .search-card {
   text-align: center;
+  max-width: 400px;
 }
 
 .search-card h2 {
@@ -283,6 +285,10 @@
   margin-bottom: 25px;
   margin-top: 10px;
   color: #2400e1;
+}
+
+.text-blue {
+  color: #12ebe0;
 }
 
 .search-card p,
@@ -297,17 +303,53 @@ a {
 
 .search-card-link {
   text-decoration: none;
-  color: #2400e1;
+  color: #ffffff;
   border: solid 2px aqua;
   border-radius: 12px;
   padding: 5px 10px;
   margin-top: 10px;
+  margin: 10px 11% 0;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
   transition: font-size 0.3s ease-in-out;
 }
 
 .search-card-link:hover {
-  color: #17c425;
-  font-size: 18px;
+  color: #000000;
+  background-color: aqua;
+  text-decoration: none;
+}
+
+.anim-line {
+  position: absolute;
+  top: -5px;
+  left: -5%;
+  height: 130%;
+  transform: skew(-10deg);
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 0, 0, 0),
+    rgba(122, 117, 117, 0),
+    rgba(167, 165, 165, 0),
+    rgba(255, 255, 255, 0.9)
+  );
+  z-index: 2;
+  transition: all 0.5s linear;
+}
+
+.search-card-link:hover span {
+  border-color: #2400e1;
+  animation: moveLine 2s infinite;
+}
+
+@keyframes moveLine {
+  from {
+    width: 0;
+  }
+  to {
+    width: 140%;
+  }
 }
 
 .not-found {
@@ -317,6 +359,15 @@ a {
   color: red;
 }
 
+.loader-container {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
 .loader {
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #3498db; /* Blue */
@@ -324,9 +375,6 @@ a {
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
-  position: absolute;
-  top: 40%;
-  left: 40%;
 }
 
 @keyframes spin {
@@ -405,8 +453,8 @@ a {
 
 .app-img {
   position: relative;
-  height: 104vh;
   overflow: hidden;
+  padding-bottom: 30px;
 }
 
 .a-img {
@@ -415,8 +463,18 @@ a {
   width: 100%;
   height: 100%;
   z-index: -1;
-  filter: blur(10px);
+  filter: blur(2px);
   transform: scale(1.03);
+}
+
+.no-data {
+  height: 300px;
+}
+
+.height-lg {
+  height: 70vh;
+  padding-top: 50px;
+  color: #12ebe0;
 }
 
 @keyframes changeColor {
@@ -429,6 +487,9 @@ a {
 }
 
 @media screen and (max-width: 600px) {
+  .a-img {
+    transform: scale(1.01);
+  }
   .app-heading h1 {
     font-size: 26px;
   }
@@ -466,8 +527,18 @@ a {
     margin: 0 25px;
   }
 
+  .user-grid {
+    flex-direction: column;
+    max-width: none;
+  }
+
   .search-img-wrapper {
     margin: auto;
     height: 180px;
+    width: 180px;
+  }
+
+  .search-card {
+    width: auto;
   }
 }
